--- a/src/views/home/home.module.scss
+++ b/src/views/home/home.module.scss
@@ -19,6 +19,11 @@
     .heading {
         display: flex;
         align-items: center;
+
+        h3 {
+            display: flex;
+            align-items: center;
+        }
     }
 
     .group {
